added links to all pages and created the links and images page with an img folder

--- a/0.01_helloworld.html
+++ b/0.01_helloworld.html
@@ -4,6 +4,8 @@
 		<title>Hello World</title>
 	</head>
 	<body>
-		Hello World
+		<!--Link to hub-->
+		<a href="0.04_links.html">Links</a>
+		<p>Hello World</p>
 	</body>
 </html>
