--- a/0.02_h&p_tags.html
+++ b/0.02_h&p_tags.html
@@ -4,6 +4,8 @@
 	<title>h, p, &amp; hr tags</title>
 </head>
 <body>
+		<!--Link to hub-->
+		<a href="0.04_links.html">Links</a>
 	<h1>Heading Tags</h1>
 	<h1>H(heading) Tags</h1>
 	<h2>h2</h2>
