--- a/0.03_lists.html
+++ b/0.03_lists.html
@@ -5,6 +5,8 @@
 	<title>Lists</title>
 </head>
 <body>
+		<!--Link to hub-->
+		<a href="0.04_links.html">Links</a>
 	<h1>Lists</h1>
 	<p>Two types of lists in HTML</p>
 	<h3>Unordered Lists</h3>
