--- a/0.01_helloworld.html
+++ b/0.01_helloworld.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<title>Hello World</title>
+		<link rel="stylesheet" type="text/css" href="0.01_helloworld.css">
 	</head>
 	<body>
 		<!--Link to hub-->
